# Base-backend

./: .dockerignore  Dockerfile  README.md  pyproject.toml
edu_helper/fastapi_server/: main.py
edu_helper/helm/: Chart.yaml  values.yaml
edu_helper/helm/templates/: fastapi_server.yaml
